# advanced-algorithms

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  benchmark_results.txt
benches/: algorithm_benchmarks.rs
examples/: crypto_demo.rs  fft_demo.rs  graph_demo.rs  optimization_demo.rs
src/: lib.rs
src/graph/: astar.rs  bellman_ford.rs  dijkstra.rs  floyd_warshall.rs  mod.rs
src/number_theory/: extended_euclidean.rs  mersenne_twister.rs  miller_rabin.rs  mod.rs
src/numerical/: fft.rs  mod.rs  newton_raphson.rs  qr_decomposition.rs  svd.rs
src/optimization/: gradient_descent.rs  levenberg_marquardt.rs  mod.rs  monte_carlo.rs
