[package]
exclude = [
    ".github/*",
    "benchmarks/*",
    "examples/large_data/*",
    "*.tmp",
    "PUBLISHING.md",
    "PROJECT_SUMMARY.md",
]
name = "advanced-algorithms"
version = "0.1.4"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
description = "A comprehensive library of advanced algorithms for numerical analysis, linear algebra, cryptography, optimization, and graph theory"
documentation = "https://docs.rs/advanced-algorithms"
homepage = "https://github.com/yourusername/advanced-algorithms"
repository = "https://github.com/yourusername/advanced-algorithms"
keywords = ["algorithms", "numerical", "optimization", "cryptography", "linear-algebra"]
categories = ["algorithms", "mathematics", "science"]
readme = "README.md"

[dependencies]
num-complex = "0.4"
rayon = "1.8"  # For parallel processing
rand = "0.8"

[dev-dependencies]
criterion = "0.5"
approx = "0.5"

[lib]
name = "advanced_algorithms"
path = "src/lib.rs"

[[bench]]
name = "algorithm_benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
